--- a/WebApplicationDemo/WebApplicationDemo/Pages/Index.cshtml
+++ b/WebApplicationDemo/WebApplicationDemo/Pages/Index.cshtml
@@ -4,41 +4,29 @@
     ViewData["Title"] = "Home page";
     }
 
-@* <div class="text-center">
+ <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div> *@
-<head>
-    <meta charset="" UTF-8"">
-    <title>Trang web đầu tiên</title>
-    <link rel="" stylesheet"" href="" /css/bootstrap.min.css"" />
-    <script src="" /js/jquery.min.js""></script>
-    <script src="" /js/popper.min.js""></script>
-    <script src="" /js/bootstrap.min.js""></script>
+</div> 
+<p class="display-4 text-danger">Đây là trang đã có Bootstrap</p>
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-danger">
+<a class="navbar-brand" href="#">Brand-Logo</a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#my-nav-bar" aria-controls="my-nav-bar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class=""navbar-toggler-icon""></span>
+</button>
+<div class="collapse navbar-collapse" id="my-nav-bar">
+<ul class="navbar-nav">
+    <li class="nav-item active">
+        <a class="nav-link" href="#">Trang chủ</a>
+    </li>
 
-</head>
-<body>
-    <nav class="" navbar navbar-expand-lg navbar-dark bg-danger"">
-        <a class="" navbar-brand"" href="" #"">Brand-Logo</a>
-        <button class="" navbar-toggler"" type="" button"" data-toggle="" collapse"" data-target="" #my-nav-bar"" aria-controls="" my-nav-bar"" aria-expanded="" false"" aria-label="" Toggle navigation"">
-            <span class="" navbar-toggler-icon""></span>
-        </button>
-        <div class="" collapse navbar-collapse"" id="" my-nav-bar"">
-            <ul class="" navbar-nav"">
-                <li class="" nav-item active"">
-                    <a class="" nav-link"" href="" #"">Trang chủ</a>
-                </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Học HTML</a>
+    </li>
 
-                <li class="" nav-item"">
-                    <a class="" nav-link"" href="" #"">Học HTML</a>
-                </li>
-
-                <li class="" nav-item"">
-                    <a class="" nav-link disabled"" href="" #"">Gửi bài</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <p class="" display-4 text-danger"">Đây là trang đã có Bootstrap</p>
-</body>
+    <li class="nav-item">
+        <a class="nav-link disabled" href="#">Gửi bài</a>
+    </li>
+</ul>
+</div>
